[package]
name = "oxwalk"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.41"
fastrand = "2.3.0"
fastrand-contrib = "0.1.0"
glam = "0.30.3"
plotters = { version = "0.3.7", default-features = false, features = [
    "bitmap_backend",
    "bitmap_gif",
    "full_palette",
] }

[profile.dev]
opt-level = 1
